Fixed footer covering content

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -11,9 +11,13 @@
 }
 
 .footer {
+      text-align: center;
       position: fixed;
       width: 100%;
       z-index: 1001;
+      left: 0px;
+      bottom: 0px;
+      margin-left: 0px !important;
 }
 
 /* Wallpaper */
@@ -25,7 +29,7 @@
 
 /* Main */
 .content {
-    height: 85vh;
+    margin-bottom: 7vh;
 }
 
 button.selected, button.selectedLunch, button.selectedBreakfast {
@@ -73,7 +77,6 @@ button:focus, .panel:focus, .btn:focus {
       width: 100%;
       height: 300px;
       position: relative;
-      box-shadow: -5px 7px 14px 0px;
 }
 
 #numberPad div:hover {
